# AkrolimbSocketGen

./: .dockerignore  .gitignore  Context.txt  Dockerfile  README.md
socketlab/: pyproject.toml  requirements.txt
socketlab/src/socketlab/: __init__.py  cli.py  examples.py  io.py  offset.py  preprocess.py  prov.py  qc.py  server.py  types.py
socketlab/src/socketlab/markings/: detect_uv.py  glb_io.py
webviewer/: README.md  index.html  package-lock.json  package.json  vite.config.js
webviewer/src/: main.jsx
