[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "socketlab"
version = "0.1.0"
description = "Generate prosthetic sockets from limb meshes (STL/OBJ)"
authors = [{ name = "Akrolimb" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "trimesh>=4.1.0",
  "scipy>=1.10",
  "shapely>=2.0",
  "scikit-image>=0.22",
]

[project.scripts]
socketlab = "socketlab.src.socketlab.cli:main"

[tool.setuptools]
packages = ["socketlab", "socketlab.src", "socketlab.src.socketlab"]
